[package]
name = "ptp-trace"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = "0.6"
phf = { version = "0.13", features = ["macros"] }
if-addrs = "0.14"
chrono = { version = "0.4", features = ["serde"] }
pcap = "1.1"
libc = "0.2"


[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "ptp-trace"
path = "src/main.rs"
