[package]
name = "ptp-trace"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29"
tokio = { version = "1.51", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = "0.6"
phf = { version = "0.13", features = ["macros"] }
if-addrs = "0.14"
chrono = { version = "0.4", features = ["serde"] }
pnet = "0.35"
pnet_datalink = "0.35"
pcap-file = "2.0"
hifitime = "4.2"
libc = "0.2"
tonic = "0.12"
tonic-web = "0.12"
prost = "0.13"
tower = { version = "0.5", features = ["util"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
async-trait = "0.1"
tokio-stream = "0.1"
rust-embed = "8.5"
mime_guess = "2.0"
http = "1.2"
http-body-util = "0.1"
hyper = "1.6"
hyper-util = { version = "0.1", features = ["tokio"] }
bytes = "1.9"
hostname = "0.4"


[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }
tonic-build = "0.12"

[[bin]]
name = "ptp-trace"
path = "src/main.rs"
